objects/ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Its used to store Error Log LineNumber</description>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Its used to store Error Log Message</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <description>Its used to store Error Log Source System</description>
        <label>SourceSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>Its used to store Error Log StackTrace</description>
        <label>StackTrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Its used to store Error Log Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its used to store Error Log User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Show_All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>SourceSystem__c</columns>
        <columns>Message__c</columns>
        <columns>Line__c</columns>
        <columns>StackTrace__c</columns>
        <filterScope>Mine</filterScope>
        <label>Show All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>ErrorLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>